<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9BCD9B"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/love"
        android:layout_width="99dp"
        android:layout_height="68dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:text="@string/love"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@android:color/holo_green_light"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/sadness"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/joy"
        android:layout_width="99dp"
        android:layout_height="68dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/joy"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@android:color/white"
        android:textColor="@android:color/holo_green_light"
        app:layout_constraintBottom_toTopOf="@+id/surprise"
        app:layout_constraintEnd_toStartOf="@+id/fear"
        app:layout_constraintStart_toEndOf="@+id/love" />

    <Button
        android:id="@+id/fear"
        android:layout_width="99dp"
        android:layout_height="68dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:text="@string/fear"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@android:color/holo_green_light"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/anger"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/sadness"
        android:layout_width="99dp"
        android:layout_height="68dp"
        android:layout_marginBottom="164dp"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:text="@string/sadness"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@android:color/white"
        android:textColor="@android:color/holo_green_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/surprise"
        android:layout_width="99dp"
        android:layout_height="68dp"
        android:layout_marginBottom="164dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/surprise"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@android:color/holo_green_light"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/anger"
        app:layout_constraintStart_toEndOf="@+id/sadness" />

    <Button
        android:id="@+id/anger"
        android:layout_width="99dp"
        android:layout_height="68dp"
        android:layout_marginBottom="164dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:text="@string/anger"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@android:color/white"
        android:textColor="@android:color/holo_green_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/history"
        android:layout_width="150dp"
        android:layout_height="68dp"
        android:layout_marginBottom="36dp"
        android:background="@android:color/holo_green_dark"
        android:onClick="showHistory"
        android:text="@string/history"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/guide"
        android:layout_width="193dp"
        android:layout_height="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/Guide"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/comment"
        android:layout_width="353dp"
        android:layout_height="76dp"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="#8FBC8F"
        android:ems="10"
        android:hint="@string/Comment"
        android:textColorHint="#FFFFFF"
        android:inputType="textMultiLine"
        android:maxLength="100"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/joy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>