<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9BCD9B"
    tools:context=".ShowHistoryAndCount">


    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/history_list">

        <TextView
            android:id="@+id/love-count"
            android:layout_width="42dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_green_light"
            android:gravity="center"
            android:text="@string/love"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/joy-count"
            android:layout_width="42dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:gravity="center"
            android:text="@string/joy"
            android:textColor="@android:color/holo_green_light"
            android:textColorHint="@android:color/holo_green_light"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fear-count"
            android:layout_width="42dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_green_light"
            android:gravity="center"
            android:text="@string/fear"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/love-num"
            android:layout_width="8dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_green_light"
            android:gravity="center"
            android:hint="0"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/joy-num"
            android:layout_width="8dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:gravity="center"
            android:hint="0"
            android:textColor="@android:color/holo_green_light"
            android:textColorHint="@android:color/holo_green_light"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fear-num"
            android:layout_width="8dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_green_light"
            android:gravity="center"
            android:hint="0"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/sadness-count"
            android:layout_width="78dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:gravity="center"
            android:text="@string/sadness"
            android:textColor="@android:color/holo_green_light"
            android:textColorHint="@android:color/holo_green_light"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/surprise-count"
            android:layout_width="78dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_green_light"
            android:gravity="center"
            android:text="@string/surprise"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/anger-count"
            android:layout_width="78dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:gravity="center"
            android:text="@string/anger"
            android:textColor="@android:color/holo_green_light"
            android:textColorHint="@android:color/holo_green_light"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/sadness-num"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:gravity="center"
            android:hint="0"
            android:textColor="@android:color/holo_green_light"
            android:textColorHint="@android:color/holo_green_light"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/surprise-num"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_green_light"
            android:gravity="center"
            android:hint="0"
            android:textColor="@android:color/white"
            android:textColorHint="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/anger-num"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:gravity="center"
            android:hint="0"
            android:textColor="@android:color/holo_green_light"
            android:textColorHint="@android:color/holo_green_light"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>


    <ListView
        android:id="@+id/history_list"
        android:layout_width="380dp"
        android:layout_height="380dp"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:background="#8FBC8F"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




</android.support.constraint.ConstraintLayout>